syntax = "proto3";

package proto_event;

import "google/protobuf/timestamp.proto";
import "types.proto";

// Event containing standard fields and detail sub-events
message Event {
    string msg = 1;
    string level = 2;
    string invocation_id = 3;
    int32 pid = 4;
    string thread = 5;
    google.protobuf.Timestamp ts = 9;
    string code = 10;
    map<string, string> extra = 11;
    oneof detail {
        proto_types.MainReportVersion main_report_version = 101;
        proto_types.MainReportArgs main_report_args = 102;
        proto_types.MainTrackingUserState main_tracking_user_state = 103;
        proto_types.MergedFromState merged_from_state = 104;
        proto_types.MissingProfileTarget missing_profile_target = 105;
        proto_types.InvalidVarsYAML invalid_vars_yaml = 108;
        proto_types.DbtProjectError dbt_project_error = 109;
        proto_types.DbtProjectErrorException dbt_project_error_exception = 110;
        proto_types.DbtProfileError dbt_profile_error = 111;
        proto_types.DbtProfileErrorException dbt_profile_error_exception = 112;
        proto_types.ProfileListTitle profile_list_title = 113;
        proto_types.ListSingleProfile list_single_profile = 114;
        proto_types.NoDefinedProfiles no_defined_profiles = 115;
        proto_types.ProfileHelpMessage profile_help_message = 116;
        proto_types.StarterProjectPath starter_project_path = 117;
        proto_types.ConfigFolderDirectory config_folder_directory = 118;
        proto_types.NoSampleProfileFound no_sample_profile_found = 119;
        proto_types.ProfileWrittenWithSample profile_written_with_sample = 120;
        proto_types.ProfileWrittenWithTargetTemplateYAML profile_written_with_target_template_yaml = 121;
        proto_types.ProfileWrittenWithProjectTemplateYAML profile_written_with_project_template_yaml = 122;
        proto_types.SettingUpProfile setting_up_profile = 123;
        proto_types.InvalidProfileTemplateYAML invalid_profile_template_yaml = 124;
        proto_types.ProjectNameAlreadyExists project_name_already_exists = 125;
        proto_types.ProjectCreated project_created = 126;
        proto_types.PackageRedirectDeprecation package_redirect_deprecation = 201;
        proto_types.PackageInstallPathDeprecation package_install_path_deprecation = 202;
        proto_types.ConfigSourcePathDeprecation config_source_path_deprecation = 203;
        proto_types.ConfigDataPathDeprecation config_data_path_deprecation = 204;
        proto_types.AdapterDeprecationWarning adapter_deprecation_warning = 205;
        proto_types.MetricAttributesRenamed metric_attributes_renamed = 206;
        proto_types.ExposureNameDeprecation exposure_name_deprecation = 207;
        proto_types.AdapterEventDebug adapter_event_debug = 301;
        proto_types.AdapterEventInfo adapter_event_info = 302;
        proto_types.AdapterEventWarning adapter_event_warning = 303;
        proto_types.AdapterEventError adapter_event_error = 304;
        proto_types.NewConnection new_connection = 305;
        proto_types.ConnectionReused connection_reused = 306;
        proto_types.ConnectionLeftOpenInCleanup connection_left_open_in_cleanup = 307;
        proto_types.ConnectionClosedInCleanup connection_closed_in_cleanup = 308;
        proto_types.RollbackFailed rollback_failed = 309;
        proto_types.ConnectionClosed connection_closed = 310;
        proto_types.ConnectionLeftOpen connection_left_open = 311;
        proto_types.Rollback rollback = 312;
        proto_types.CacheMiss cache_miss = 313;
        proto_types.ListRelations list_relations = 314;
        proto_types.ConnectionUsed connection_used = 315;
        proto_types.SQLQuery sql_query = 316;
        proto_types.SQLQueryStatus sql_query_status = 317;
        proto_types.SQLCommit sql_commit = 318;
        proto_types.ColTypeChange col_type_change = 319;
        proto_types.SchemaCreation schema_creation = 320;
        proto_types.SchemaDrop schema_drop = 321;
        proto_types.UncachedRelation uncached_relation = 322;
        proto_types.AddLink add_link = 323;
        proto_types.AddRelation add_relation = 324;
        proto_types.DropMissingRelation drop_missing_relation = 325;
        proto_types.DropCascade drop_cascade = 326;
        proto_types.DropRelation drop_relation = 327;
        proto_types.UpdateReference update_reference = 328;
        proto_types.TemporaryRelation temporary_relation = 329;
        proto_types.RenameSchema rename_schema = 330;
        proto_types.DumpBeforeAddGraph dump_before_add_graph = 331;
        proto_types.DumpAfterAddGraph dump_after_add_graph = 332;
        proto_types.DumpBeforeRenameSchema dump_before_rename_schema = 333;
        proto_types.DumpAfterRenameSchema dump_after_rename_schema = 334;
        proto_types.AdapterImportError adapter_import_error = 335;
        proto_types.PluginLoadError plugin_load_error = 336;
        proto_types.NewConnectionOpening new_connection_opening = 337;
        proto_types.CodeExecution code_execution = 338;
        proto_types.CodeExecutionStatus code_execution_status = 339;
        proto_types.CatalogGenerationError catalog_generation_error = 340;
        proto_types.WriteCatalogFailure write_catalog_failure = 341;
        proto_types.CatalogWritten catalog_written = 342;
        proto_types.CannotGenerateDocs cannot_generate_docs = 343;
        proto_types.BuildingCatalog building_catalog = 344;
        proto_types.DatabaseErrorRunningHook database_error_running_hook = 345;
        proto_types.HooksRunning hooks_running = 346;
        proto_types.HookFinished hook_finished = 347;
        proto_types.ParseCmdStart parse_cmd_start = 401;
        proto_types.ParseCmdCompiling parse_cmd_compiling = 402;
        proto_types.ParseCmdWritingManifest parse_cmd_writing_manifest = 403;
        proto_types.ParseCmdDone parse_cmd_done = 404;
        proto_types.ManifestDependenciesLoaded manifest_dependencies_loaded = 405;
        proto_types.ManifestLoaderCreated manifest_lader_created = 406;
        proto_types.ManifestLoaded manifest_loaded = 407;
        proto_types.ManifestChecked manifest_checked = 408;
        proto_types.ManifestFlatGraphBuilt manifest_flat_graph_built = 409;
        proto_types.ParseCmdPerfInfoPath parse_cmd_perf_info_path = 410;
        proto_types.GenericTestFileParse generic_test_file_parse = 411;
        proto_types.MacroFileParse macro_file_parse = 412;
        proto_types.PartialParsingFullReparseBecauseOfError partial_parsing_full_reparse_because_of_error = 413;
        proto_types.PartialParsingExceptionFile partial_parsing_exception_file = 414;
        proto_types.PartialParsingFile partial_parsing_file = 415;
        proto_types.PartialParsingException partial_parsing_exception = 416;
        proto_types.PartialParsingSkipParsing partial_parsing_skip_parsing = 417;
        proto_types.PartialParsingMacroChangeStartFullParse partial_parsing_macro_change_start_full_parse = 418;
        proto_types.PartialParsingProjectEnvVarsChanged partial_parsing_project_env_vars_changed = 419;
        proto_types.PartialParsingProfileEnvVarsChanged partial_parsing_profile_env_vars_changed = 420;
        proto_types.PartialParsingDeletedMetric partial_parsing_deleted_metric = 421;
        proto_types.ManifestWrongMetadataVersion manifest_wrong_metadata_version = 422;
        proto_types.PartialParsingVersionMismatch partial_parsing_version_mismatch = 423;
        proto_types.PartialParsingFailedBecauseConfigChange partial_parsing_failed_because_config_change = 424;
        proto_types.PartialParsingFailedBecauseProfileChange partial_parsing_failed_because_profile_change = 425;
        proto_types.PartialParsingFailedBecauseNewProjectDependency partial_parsing_failed_because_new_project_dependency = 426;
        proto_types.PartialParsingFailedBecauseHashChanged partial_parsing_failed_because_hash_changed = 427;
        proto_types.PartialParsingNotEnabled partial_parsing_not_enabled = 428;
        proto_types.ParsedFileLoadFailed parsed_file_load_failed = 429;
        proto_types.PartialParseSaveFileNotFound partial_parsing_save_file_not_found = 430;
        proto_types.StaticParserCausedJinjaRendering static_parser_caused_jinja_rendering = 431;
        proto_types.UsingExperimentalParser using_experimental_parser = 432;
        proto_types.SampleFullJinjaRendering sample_full_jinja_rendering = 433;
        proto_types.StaticParserFallbackJinjaRendering static_parser_fallback_jinja_rendering = 434;
        proto_types.StaticParsingMacroOverrideDetected static_parsing_macro_override_detected = 435;
        proto_types.StaticParserSuccess static_parser_success = 436;
        proto_types.StaticParserFailure static_parser_failure = 437;
        proto_types.ExperimentalParserSuccess experimental_parser_success = 438;
        proto_types.ExperimentalParserFailure experimental_parser_failure = 439;
        proto_types.PartialParsingEnabled partial_parsing_enabled = 440;
        proto_types.PartialParsingAddedFile partial_parsing_added_file = 441;
        proto_types.PartialParsingDeletedFile partial_parsing_deleted_file = 442;
        proto_types.PartialParsingUpdatedFile partial_parsing_updated_file = 443;
        proto_types.PartialParsingNodeMissingInSourceFile partial_parsing_node_missing_in_source_file = 444;
        proto_types.PartialParsingMissingNodes partial_parsing_missing_nodes = 445;
        proto_types.PartialParsingChildMapMissingUniqueID partial_parsing_child_map_missing_unique_id = 446;
        proto_types.PartialParsingUpdateSchemaFile partial_parsing_update_schema_file = 447;
        proto_types.PartialParsingDeletedSource partial_parsing_deleted_source = 448;
        proto_types.PartialParsingDeletedExposure partial_parsing_deleted_exposure = 449;
        proto_types.InvalidDisabledTargetInTestNode invalid_disabled_target_in_test_node = 450;
        proto_types.UnusedResourceConfigPath unused_resource_config_path = 451;
        proto_types.SeedIncreased seed_increased = 452;
        proto_types.SeedExceedsLimitSamePath seed_exceeds_limit_same_path = 453;
        proto_types.SeedExceedsLimitAndPathChanged seed_exceeds_limit_and_path_changed = 454;
        proto_types.SeedExceedsLimitChecksumChanged seed_exceeds_limit_checksum_changed = 455;
        proto_types.UnusedTables unused_tables = 456;
        proto_types.WrongResourceSchemaFile wrong_resource_schema_file = 457;
        proto_types.NoNodeForYamlKey no_node_for_yaml_key = 458;
        proto_types.MacroPatchNotFound macro_patch_not_found = 459;
        proto_types.NodeNotFoundOrDisabled node_not_found_or_disabled = 460;
        proto_types.GeneralMacroWarning general_macro_warning = 461;
        proto_types.GitSparseCheckoutSubdirectory git_sparse_checkout_subdirectory = 501;
        proto_types.GitProgressCheckoutRevision git_progress_checkout_revision = 502;
        proto_types.GitProgressUpdatingExistingDependency git_progress_updating_existing_dependency = 503;
        proto_types.GitProgressPullingNewDependency git_progress_pulling_new_dependency = 504;
        proto_types.GitNothingToDo git_nothing_to_do = 505;
        proto_types.GitProgressUpdatedCheckoutRange git_progress_updated_checkout_range = 506;
        proto_types.GitProgressCheckedOutAt git_progress_checked_out_at = 507;
        proto_types.RegistryProgressGETRequest registry_progress_get_request = 508;
        proto_types.RegistryProgressGETResponse registry_progress_get_response = 509;
        proto_types.SelectorReportInvalidSelector selector_report_invalid_selector = 510;
        proto_types.JinjaLogInfo jinja_log_info = 511;
        proto_types.JinjaLogDebug jinja_log_debug = 512;
        proto_types.DepsNoPackagesFound deps_no_packages_found = 513;
        proto_types.DepsStartPackageInstall deps_start_package_install = 514;
        proto_types.DepsInstallInfo deps_install_info = 515;
        proto_types.DepsUpdateAvailable deps_update_available = 516;
        proto_types.DepsUpToDate deps_up_to_date = 517;
        proto_types.DepsListSubdirectory deps_list_subdirectory = 518;
        proto_types.DepsNotifyUpdatesAvailable deps_notify_updates_available = 519;
        proto_types.RetryExternalCall retry_external_call = 520;
        proto_types.RecordRetryException record_retry_exception = 521;
        proto_types.RegistryIndexProgressGETRequest registry_index_progress_get_request = 522;
        proto_types.RegistryIndexProgressGETResponse registry_index_progress_get_response = 523;
        proto_types.RegistryResponseUnexpectedType registry_response_unexpected_type = 524;
        proto_types.RegistryResponseMissingTopKeys registry_response_missing_top_keys = 525;
        proto_types.RegistryResponseMissingNestedKeys registry_response_missing_nested_keys = 526;
        proto_types.RegistryResponseExtraNestedKeys registry_response_extra_nested_keys = 527;
        proto_types.DepsSetDownloadDirectory deps_set_download_directory = 528;
        proto_types.DepsUnpinned deps_unpinned = 529;
        proto_types.NoNodesForSelectionCriteria no_nodes_for_selection_criteria = 530;
        proto_types.RunningOperationCaughtError running_operation_caught_error = 601;
        proto_types.CompileComplete compile_complete = 602;
        proto_types.FreshnessCheckComplete freshness_check_complete = 603;
        proto_types.SeedHeader seed_header = 604;
        proto_types.SeedHeaderSeparator seed_header_separator = 605;
        proto_types.SQLRunnerException sql_runner_exception = 606;
        proto_types.LogTestResult log_test_result = 607;
        proto_types.LogStartLine log_start_line = 608;
        proto_types.LogModelResult log_model_result = 609;
        proto_types.LogSnapshotResult log_snapshot_result = 615;
        proto_types.LogSeedResult log_seed_result = 616;
        proto_types.LogFreshnessResult log_freshness_result = 617;
        proto_types.LogCancelLine log_cancel_line = 622;
        proto_types.DefaultSelector default_selector = 623;
        proto_types.NodeStart node_start = 624;
        proto_types.NodeFinished node_finished = 625;
        proto_types.QueryCancelationUnsupported query_cancelation_unsupported = 626;
        proto_types.ConcurrencyLine concurrency_line = 627;
        proto_types.CompilingNode compiling_node = 628;
        proto_types.WritingInjectedSQLForNode writing_injected_sql_for_node = 629;
        proto_types.NodeCompiling node_compiling = 630;
        proto_types.NodeExecuting node_executing = 631;
        proto_types.LogHookStartLine log_hook_start_line = 632;
        proto_types.LogHookEndLine log_hook_end_line = 633;
        proto_types.SkippingDetails skipping_details = 634;
        proto_types.NothingToDo nothing_to_do = 635;
        proto_types.RunningOperationUncaughtError running_operation_uncaught_error = 636;
        proto_types.EndRunResult end_run_result = 637;
        proto_types.NoNodesSelected no_nodes_selected = 638;
        proto_types.CatchableExceptionOnRun catchable_exception_on_run = 702;
        proto_types.InternalExceptionOnRun internal_exception_on_run = 703;
        proto_types.GenericExceptionOnRun generic_exception_on_run = 704;
        proto_types.NodeConnectionReleaseError node_connection_release_error = 705;
        proto_types.FoundStats found_stats = 706;
        proto_types.MainKeyboardInterrupt main_keyboard_interrupt = 801;
        proto_types.MainEncounteredError main_encountered_error = 802;
        proto_types.MainStackTrace main_stack_trace = 803;
        proto_types.SystemErrorRetrievingModTime system_error_retrieving_mod_time = 804;
        proto_types.SystemCouldNotWrite system_could_not_write = 805;
        proto_types.SystemExecutingCmd system_executing_cmd = 806;
        proto_types.SystemStdOutMsg system_std_out_msg = 807;
        proto_types.SystemStdErrMsg system_std_err_msg = 808;
        proto_types.SystemReportReturnCode system_report_return_code = 809;
        proto_types.TimingInfoCollected timing_info_collected = 810;
        proto_types.LogDebugStackTrace log_debug_stack_trace = 811;
        proto_types.CheckCleanPath check_clean_path = 812;
        proto_types.ConfirmCleanPath confirm_clean_path = 813;
        proto_types.ProtectedCleanPath protected_clean_path = 814;
        proto_types.FinishedCleanPaths finished_clean_path = 815;
        proto_types.OpenCommand open_command = 816;
        proto_types.EmptyLine empty_line = 817;
        proto_types.ServingDocsPort serving_docs_port = 818;
        proto_types.ServingDocsAccessInfo serving_docs_access_info = 819;
        proto_types.ServingDocsExitInfo serving_docs_exit_info = 820;
        proto_types.RunResultWarning run_result_warning = 821;
        proto_types.RunResultFailure run_result_failure = 822;
        proto_types.StatsLine stats_line = 823;
        proto_types.RunResultError run_result_error = 824;
        proto_types.RunResultErrorNoMessage run_result_error_no_message = 825;
        proto_types.SQLCompiledPath sql_compiled_path = 826;
        proto_types.CheckNodeTestFailure check_node_test_failure = 827;
        proto_types.FirstRunResultError first_run_result_error = 828;
        proto_types.AfterFirstRunResultError after_first_run_result_error = 829;
        proto_types.EndOfRunSummary end_of_run_summary = 830;
        proto_types.LogSkipBecauseError log_skip_because_error = 834;
        proto_types.EnsureGitInstalled ensure_git_installed = 836;
        proto_types.DepsCreatingLocalSymlink deps_creating_local_symlink = 837;
        proto_types.DepsSymlinkNotAvailable deps_symlink_not_available = 838;
        proto_types.DisableTracking disable_tracking = 839;
        proto_types.SendingEvent sending_event = 840;
        proto_types.SendEventFailure send_event_failure = 841;
        proto_types.FlushEvents flush_events = 842;
        proto_types.FlushEventsFailure flush_events_failure = 843;
        proto_types.TrackingInitializeFailure tracking_initialize_failure = 844;
        proto_types.EventBufferFull event_buffer_full = 845;
        proto_types.RunResultWarningMessage run_result_warning_message = 846;
        proto_types.IntegrationTestInfo integration_test_info = 901;
        proto_types.IntegrationTestDebug integration_test_debug = 902;
        proto_types.IntegrationTestWarn integration_test_warn = 903;
        proto_types.IntegrationTestError integration_test_error = 904;
        proto_types.IntegrationTestException integration_test_exception = 905;
        proto_types.UnitTestInfo unit_test_info = 906;
    }

}

